[gd_scene load_steps=12 format=3 uid="uid://r4r81vaccsxv"]

[ext_resource type="Script" path="res://scripts/scanimation_tree.gd" id="1_23p8p"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mcan7"]
animation = &"Action"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f5nxb"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dbgjr"]
animation = &"Move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cmn3x"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urcwn"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xhqpi"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7qa81"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tm8sl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gy0xw"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_l5rwr"]
states/Action/node = SubResource("AnimationNodeAnimation_mcan7")
states/Action/position = Vector2(633, 60)
states/Idle/node = SubResource("AnimationNodeAnimation_f5nxb")
states/Idle/position = Vector2(373, 48)
states/Move/node = SubResource("AnimationNodeAnimation_dbgjr")
states/Move/position = Vector2(483, 177)
transitions = ["Idle", "Action", SubResource("AnimationNodeStateMachineTransition_cmn3x"), "Move", "Action", SubResource("AnimationNodeStateMachineTransition_urcwn"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_xhqpi"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_7qa81"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_tm8sl"), "Action", "Move", SubResource("AnimationNodeStateMachineTransition_gy0xw")]

[node name="ScanimationTree" type="AnimationTree"]
tree_root = SubResource("AnimationNodeStateMachine_l5rwr")
anim_player = NodePath("../AnimationPlayer")
script = ExtResource("1_23p8p")

[node name="PlayerDetect" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetect"]

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
